environments/production/monitoring/grafana/ingress.yaml
##---
# Source: grafana/templates/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  labels:
    app: prod-grafana
    chart: "grafana-0.8.3"
    component: "grafana"
    heritage: "Tiller"
    release: "prod"
  name: prod-grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.prod
      http:
        paths:
          - backend:
              serviceName: prod-grafana
              servicePort: 80
